--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,56 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
-workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
-    jobs:
-      - welcome/run
+jobs:
+
+  setup:
+    steps:
+      - run:
+        name: "Install SFML dependencies"
+        command: sudo apt-get install libpthread-stubs0-dev libx11-dev libxrandr-dev libfreetype6-dev libglew1.5-dev libjpeg8-dev libsndfile1-dev libopenal-dev libudev-dev cmake
+      - run:
+        name: "Install test dependencies"
+        command: sudo apt-get install valgrind
+
+  install_sfml:
+    steps:
+      - run: |
+        mkdir SFML
+        cd SFML
+        git clone --single-branch --branch 2.5.x https://github.com/SFML/SFML.git
+        cd SFML
+        cmake .
+        make
+        sudo make install
+        cd ../..
+  build_boost:
+    steps:
+      - run: |
+        mkdir boost
+        cd boost
+        wget https://dl.bintray.com/boostorg/release/1.72.0/source/boost_1_72_0.tar.gz
+        tar -xzf boost_1_72_0.tar.gz
+        cd boost_1_72_0
+        ./bootstrap.sh --with-libraries=test
+        sudo ./b2 install
+  build:
+    steps:
+      - checkout 
+      - run:
+        command: |
+          mkdir GB_Build_Dir
+          cd GB_Build_Dir/
+          cmake ../GameBackboneSln/ -DGAMEBACKBONE_BUILD_TESTS=OFF
+          make  
+    # stuff
+  # test:
+    # more stuff
+  # clang-tidy:
+    # clang tidy stuff
+  # cppcheck:
+    # cppcheck stuff
+  # clang-format:
+    # format stuff
+  # doxygen:
+    # doxygen stuff
+  # vcpkg:
+    # vcpkg stuff
