--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ version: 2.1
 jobs:
 
   build:
+    docker:
+      - image: ubuntu:18.04
+
     steps:
       - run:
         name: "Install SFML dependencies"
