--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,50 +13,6 @@ jobs:
       - run:
         name: "Install test dependencies"
         command: sudo apt-get install valgrind
-
-  # install_sfml:
-  #   steps:
       - run:
         name: "Install SFML"
-        command: | 
-          mkdir SFML
-          cd SFML
-          git clone --single-branch --branch 2.5.x https://github.com/SFML/SFML.git
-          cd SFML
-          cmake .
-          make
-          sudo make install
-          cd ../..
-  # build_boost:
-  #   steps:
-  #    - run: |
-  #      mkdir boost
-  #      cd boost
-  #      wget https://dl.bintray.com/boostorg/release/1.72.0/source/boost_1_72_0.tar.gz
-  #      tar -xzf boost_1_72_0.tar.gz
-  #      cd boost_1_72_0
-  #      ./bootstrap.sh --with-libraries=test
-  #      sudo ./b2 install
-  # build:
-  #  steps:
-  #    - checkout 
-  #    - run:
-  #      command: |
-  #        mkdir GB_Build_Dir
-  #        cd GB_Build_Dir/
-  #        cmake ../GameBackboneSln/ -DGAMEBACKBONE_BUILD_TESTS=ON
-  #        make
-  #        make test
-  #  # stuff
-  # test:
-    # more stuff
-  # clang-tidy:
-    # clang tidy stuff
-  # cppcheck:
-    # cppcheck stuff
-  # clang-format:
-    # format stuff
-  # doxygen:
-    # doxygen stuff
-  # vcpkg:
-    # vcpkg stuff
+        command: mkdir SFML && cd SFML && git clone --single-branch --branch 2.5.x https://github.com/SFML/SFML.git && cd SFML && cmake . && make && sudo make install && cd ../..
