--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,8 @@ version: 2.1
 jobs:
 
   build:
-    machine:
-      image: ubuntu-1604:201903-01
+    docker:
+      - image: ubuntu:18.04
 
     steps:
       - run:
