--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,16 +4,16 @@ jobs:
 
   build:
     docker:
-      - image: ubuntu:18.04
+      - image: buildpack-deps/18.04-curl
 
     steps:
-      - run: apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/*
+      - run: sudo apt install git cmake build-essential -y
       - run:
           name: "Install SFML dependencies"
-          command: sudo apt-get install libpthread-stubs0-dev libx11-dev libxrandr-dev libfreetype6-dev libopenal-dev libudev-dev cmake -y
+          command: sudo apt install libpthread-stubs0-dev libx11-dev libxrandr-dev libfreetype6-dev libopenal-dev libudev-dev -y
       - run:
           name: "Install test dependencies"
-          command: sudo apt-get install valgrind -y
+          command: sudo apt install valgrind -y
       - run:
           name: "Install SFML"
           command: mkdir SFML && cd SFML && git clone --single-branch --branch 2.5.x https://github.com/SFML/SFML.git && cd SFML && cmake . && make && sudo make install && cd ../..
