i138 - circleci-project-setup: less sudo again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,13 +7,13 @@ jobs:
       - image: buildpack-deps:18.04-curl
 
     steps:
-      - run: sudo apt install git cmake build-essential -y
+      - run: apt install git cmake build-essential -y
       - run:
           name: "Install SFML dependencies"
-          command: sudo apt install libpthread-stubs0-dev libx11-dev libxrandr-dev libfreetype6-dev libopenal-dev libudev-dev -y
+          command: apt install libpthread-stubs0-dev libx11-dev libxrandr-dev libfreetype6-dev libopenal-dev libudev-dev -y
       - run:
           name: "Install test dependencies"
-          command: sudo apt install valgrind -y
+          command: apt install valgrind -y
       - run:
           name: "Install SFML"
           command: mkdir SFML && cd SFML && git clone --single-branch --branch 2.5.x https://github.com/SFML/SFML.git && cd SFML && cmake . && make && sudo make install && cd ../..
