--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,3 +36,4 @@ jobs:
           cd GB_Build_Dir/
           cmake ../GameBackboneSln/ -DGAMEBACKBONE_BUILD_TESTS=ON
           make
+          make test
