--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
           cd ..
 
       - run: |
-          apt install xvfb
+          apt install xvfb -y
 
       - run: |
           cd GameBackboneSln/build/bin
